# pysoar

./: .dockerignore  .env.bak  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PYSOAR_PAGES.md  README.md  STUB_INVENTORY.txt  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  encryption.py  llm.py  oracle-public-key.pub  pyproject.toml  requirements.txt  secrets.py  setup-autostart.ps1  start-pysoar.ps1  status-pysoar.ps1  stop-pysoar.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  security.yml
agent/: README.md  build.bat  build.sh  pysoar_agent.py  requirements-build.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_extended_schema.py  003_additional_modules.py  004_remaining_modules.py  005_final_modules.py  006_data_lake_collaboration.py  007_unify_iocs_into_threat_indicators.py  008_normalize_indicator_types.py  009_compliance_framework_unique_per_org.py  010_adversary_profiles_org_nullable.py  011_simulation_timestamps_tz.py  012_agent_platform.py  013_remediation_timestamps_tz.py  014_assets_and_executions_org_scope.py  015_alerts_incidents_org_scope.py  016_hunting_module_org_scope.py  017_app_settings_table.py  018_password_reset_token.py  019_attack_knowledge_base.py  __init__.py
bridge/base/: 0-pysoar-namespace.yaml  api-CUsersjacobpysoaralembic-persistentVolumeClaim.yaml  api-CUsersjacobpysoarsrc-persistentVolumeClaim.yaml  api-deployment.yaml  api-expose.yaml  api-pysoar-logs-persistentVolumeClaim.yaml  api-pysoar-uploads-persistentVolumeClaim.yaml  api-service.yaml  flower-deployment.yaml  flower-expose.yaml  flower-service.yaml  frontend-deployment.yaml  frontend-expose.yaml  frontend-service.yaml  kustomization.yaml  postgres-deployment.yaml  postgres-expose.yaml  postgres-pysoar-postgres-persistentVolumeClaim.yaml  postgres-service.yaml  pysoar-network-network-policy.yaml  redis-deployment.yaml  redis-expose.yaml  redis-pysoar-redis-persistentVolumeClaim.yaml  redis-service.yaml  scheduler-CUsersjacobpysoarsrc-persistentVolumeClaim.yaml  scheduler-deployment.yaml  scheduler-expose.yaml  worker-CUsersjacobpysoarsrc-persistentVolumeClaim.yaml  worker-deployment.yaml  worker-expose.yaml  worker-pysoar-logs-persistentVolumeClaim.yaml  worker-pysoar-uploads-persistentVolumeClaim.yaml
config/detection_rules/: brute_force_login.yaml  data_exfiltration.yaml  lateral_movement.yaml  persistence_mechanism.yaml  privilege_escalation.yaml  suspicious_process.yaml
connectors/: base.py  crowdstrike.py  microsoft_sentinel.py  shodan.py  virustotal.py
deploy/: configure-env.sh  server-setup.sh  start-production.sh  upload-to-server.ps1
deploy/windows/: install-forwarder-task.ps1  pysoar-log-forwarder.ps1
docs/: gtm-plan.md  pysoar-claim-implementation-mapping.md  pysoar-engineering-backlog.md  pysoar-enterprise-roadmap.md  pysoar-issue-descriptions.md  stig-endpoint-agent-contract.md
docs/fedramp/: CONFIGURATION_MANAGEMENT_PLAN.md  CONTINUOUS_MONITORING_PLAN.md  INCIDENT_RESPONSE_PLAN.md  SSP_TEMPLATE.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
monitoring/: prometheus.yml
nginx/: default.conf  nginx.conf
scripts/: db_setup.py  seed_demo.py
src/: __init__.py  main.py
src/ai/: engine.py  (+3 more)
tests/: __init__.py  conftest.py  test_agentic.py  test_agentic_skills.py  test_api_auth.py  test_compliance.py  test_dfir.py  test_dlp.py  test_exposure.py  test_hunting.py  test_integrations.py  test_intel.py  test_remediation.py  test_siem.py  test_siem_engine.py  test_ueba.py  test_websocket.py
(+526 files in other folders)
